# newton

./: .gitignore  README.md
backend/: .gitignore  README.md  db.sqlite3  pyproject.toml
backend/config/: settings.py  urls.py
backend/professionals/: admin.py  models.py  serializers.py  urls.py  views.py
backend/professionals/management/commands/: load_sample_data.py
backend/professionals/migrations/: 0001_initial.py  0002_alter_professional_options_professional_updated_at_and_more.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ProfessionalForm.jsx  ProfessionalTable.jsx  SourceFilter.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  dialog.jsx  select.jsx
frontend/src/lib/: api.js
